criação da rota para os posts

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,4 +1,10 @@
 {% extends "template.html" %}
 {% block content %}
-    {{ post | safe}}
+<h1>Teste</h1>
+<div class="container w-25">
+    <div class="mx-auto">
+        {{ posts_list | safe}}
+    </div>
+</div>
+
 {% endblock %}
