--- a/app/templates/template.html
+++ b/app/templates/template.html
@@ -5,11 +5,21 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Meu blog</title>
         <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap.css') }}">
-        <link rel="stylesheet" href="{{ url_for('static', filename='posts.css') }}">
+        <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
         <script src="https://cdn.jsdelivr.net/npm/mathjax@2/MathJax.js?config=TeX-AMS_HTML"></script>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
+
     </head>
 
-<body>
+<body style="background-color: #f8f7f4">
+  <nav class="navbar navbar-expand justify-content-center">
+    <div class="navbar-nav gap-3">
+      <a class="nav-link fw-semibold" href="{{ url_for('index') }}">Sobre mim</a>
+      <a class="nav-link fw-semibold" href="{{ url_for('portfolio') }}">Portfólio</a>
+      <a class="nav-link fw-semibold" href="{{ url_for('posts') }}">Posts</a>
+    </div>
+  </nav>
+
     {% block content %} {% endblock %}
 </body>
 </html>
