post: configurações de um switch

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -3,7 +3,7 @@
 <div class="container my-4">
     <h1 class="text-center fw-bold mb-2">Sobre mim</h1>
     <p class="text-center text-muted mb-4">
-        Um pouco sobre minha formação e Habilidades
+        Um pouco sobre minha formação e habilidades
     </p>
 
     <div class="row justify-content-center">
