Criação do portfólio

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -10,9 +10,9 @@
         <div class="col-12 col-md-10 col-lg-8">
 
             <div class="card shadow-sm mb-4">
-                <div class="card-body p-4 p-md-5">
+                <div class="card-body p-4 p-md-5" style="background-color: rgb(226, 241, 213);">
 
-                    <h4 class="fw-bold mb-3">Quem sou eu</h4>
+                    <h4 class="fw-bold mb-3 section-title">Bem Vindo</h4>
                     <p class="lh-lg">
                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto eius ab dicta soluta a voluptates eos fugiat fuga impedit vel? Totam quidem porro animi ullam repellendus in facilis officiis asperiores.
                     </p>
