--- a/app/templates/post.html
+++ b/app/templates/post.html
@@ -3,7 +3,7 @@
 <div class="container">
   <div class="row justify-content-center">
     <div class="col-12 col-md-10 col-lg-8">
-      <div class="card mb-4 shadow-sm">
+      <div class="card mb-4 shadow-sm" style="background-color: rgb(226, 241, 213)">
         <div class="card-body lh-lg">
           {{ post | safe }}
         </div>
