--- a/app/static/style.css
+++ b/app/static/style.css
@@ -1,11 +1,18 @@
 .post-card {
     display: flex;
     transition: transform .2s ease, box-shadow .2s ease;
+    background-color: rgb(226, 241, 213);
 }
 
 .post-card:hover {
     transform: translateY(-4px);
     box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
+}
+
+.post-card img {
+  object-fit: cover;
+  height: 100%;
+  max-height: 180px;
 }
 
 .section-title {
