--- a/app/templates/portfolio.html
+++ b/app/templates/portfolio.html
@@ -1,7 +1,64 @@
 {% extends "template.html" %}
 {% block content %}
-<div class="container my-4"></div>
+<div class="container my-4">
     <h1 class="text-center fw-bold mb-2">Portfólio</h1>
     <p class="text-center text-muted mb-4">Projetos e atividades</p>
+    
+    <div class="container my-5">
+        <div class="row justify-content-center">
+            <div class="col-12 col-md-10 col-lg-8">
+            {% for p in projetos %}
+            <div class="card mb-4 shadow-sm border-0 post-card">
+                <div class="card-body">
+                    <div class="row align-items-center g-3">
+                        <div class="col-12 col-md-4">
+                            <img src="{{ p.imagem }}"
+                                class="img-fluid rounded"
+                                alt="Imagem do projeto {{ p.nome }}">
+                        </div>
+                        <div class="col-12 col-md-8">
+                            <h4 class="fw-bold mb-1 section-title">
+                            {{ p.nome }}
+                            </h4>
+
+                            <p class="card-text">
+                            {{ p.desc }}
+                            </p>
+
+                            <p class="text-muted mb-2">
+                            <strong>Tecnologias:</strong> {{ p.tecnologias }}
+                            </p>
+
+                            <div class="d-flex flex-wrap gap-2">
+                            <a href="{{ p.link1 }}" class="btn btn-outline-dark btn-sm">
+                                <i class="bi bi-github me-2"></i>GitHub
+                            </a>
+
+                            {% if p.link2 %}
+                                <a href="{{ p.link2 }}" class="btn btn-dark btn-sm">
+                                Ver projeto
+                                </a>
+                            {% endif %}
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            {% endfor %}
+
+            <div class="card mb-4 shadow-sm border-0">
+
+            </div>
+
+
+            <div class="card mb-4 shadow-sm border-0">
+
+            </div>
+
+            </div>
+        </div>
+    </div>
+
+
 </div>
 {% endblock %}
