--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -12,9 +12,12 @@
             <div class="card shadow-sm mb-4">
                 <div class="card-body p-4 p-md-5" style="background-color: rgb(226, 241, 213);">
 
-                    <h4 class="fw-bold mb-3 section-title">Bem Vindo</h4>
-                    <p class="lh-lg">
-                       Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto eius ab dicta soluta a voluptates eos fugiat fuga impedit vel? Totam quidem porro animi ullam repellendus in facilis officiis asperiores.
+                    <h4 class="fw-bold mb-3 section-title">Quem sou eu</h4>
+                    <p class="about-text">
+                       Seja bem-vindo(a) ao meu site! Sou <strong>Welington Carvalho</strong>, estudante de computação, atualmente no 7° período. 
+                       <br>
+                       <br>
+                       A ideia principal deste blog é compartilhar outros projetos pessoais e postar anotações dos meus estudos de computação para criar um acervo virtual e público das minhas ideias.
                     </p>
 
                     <h4 class="fw-bold mt-5 mb-3 section-title">Formação</h4>
