--- a/app/templates/template.html
+++ b/app/templates/template.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+      <meta name="google-site-verification" content="7GCnS_ekfAIGDecMWJDY9b1krgSwYfZpkRFYizn_4dM" />
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Meu blog</title>
